objects/ShipmentItem.object
<CustomObject>
    <fields>
        <fullName>SDO_OMS_AssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: Asset
Who: Bill Macaulay When: Oct 2021.
Used to link Shipments to generated Assets</description>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Shipment Items</relationshipLabel>
        <relationshipName>Shipment_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_OMS_Expiration_Date__c</fullName>
        <description>What: Shipment item
Who: Bill Macaulay When: Oct 2022
Add fields to shipment items</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SDO_OMS_Lot_Number__c</fullName>
        <description>What: Shipment item
Who: Bill Macaulay When: Oct 2022
Add fields to shipment items</description>
        <label>Lot Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_OMS_Serial_Number__c</fullName>
        <description>What: Shipment item
Who: Bill Macaulay When: Oct 2022
Add fields to shipment items</description>
        <displayFormat>{0000}-{0000}</displayFormat>
        <label>Serial Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Serial_Number2__c</fullName>
        <displayFormat>{0000}-{0000}</displayFormat>
        <label>Serial Number</label>
        <type>AutoNumber</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>